<resources>
    <string name="app_name">IMG Helper</string>
    <string name="root_permissions">Root permission</string>
    <string name="granted">Granted</string>
    <string name="not_granted">Not granted</string>
    <string name="home">Home</string>
    <string name="unpack">Unpack</string>
    <string name="pack">Pack</string>
    <string name="extract">Extract</string>
    <string name="dtbo_patch_subtext">For forcing refresh rate</string>
    <string name="dtbo_patch">DTBO patch</string>
    <string name="dtbo_tips">The refresh rate to be patched is not exactly the real refresh rate of your screen.\nFor example, the real refresh rate of the Xiaomi Mi 10 Ultra is 120Hz, and if you want to fix the DTBO to force the global 120Hz, fill in 90 here. Please test the specific value by yourself.</string>
    <string name="dtbo_textfield_hint">Refresh rate</string>
    <string name="patch_only">Patch only</string>
    <string name="patch_and_flash">Patch and flash</string>
    <string name="dtbo_copyright">From：\nCoolapk @神裂火织\nAuthorized</string>
    <string name="default_refresh_rate" translatable="false">90</string>
    <string name="wait">Please wait</string>
    <string name="tips">Tips</string>
    <string name="confirm">Confirm</string>
    <string name="patch_dtbo_successfully">"Patch successfully!\nThe dtob_new.img is in:\n"</string>
    <string name="patch_dtbo_failed">Patch failed!</string>
    <string name="patch_dtbo_flash_successfully">\nFlashed，please reboot!</string>
    <string name="patch_dtbo_flash_failed">\nFlash failed，can not find dtbo partition!</string>
    <string name="about">About</string>
    <string name="extract_img">Extract image</string>
    <string name="extract_img_subtext">Extract image from phone</string>
    <string name="extract_successfully">Extract successfully!</string>
    <string name="extract_failed">Extract failed</string>
    <string name="about_app">About app</string>
    <string name="about_author">About author</string>
    <string name="coolapk_1394294">Coolapk @XayahSuSuSu</string>
    <string name="app_author">App author</string>
    <string name="credits">Credits</string>
    <string name="clash_for_android" translatable="false">Clash For Android</string>
    <string name="unpack_successfully">Unpack successfully!\nPlaced: </string>
    <string name="unpack_failed">Unpack failed!</string>
    <string name="unpack_boot">Unpack boot</string>
    <string name="unpack_boot_subtext">Unpack boot image</string>
    <string name="pack_boot">Pack boot</string>
    <string name="pack_boot_subtext">Pack boot image</string>
    <string name="pack_successfully">Pack successfully!\nPlaced: </string>
    <string name="pack_failed">Pack failed!</string>
    <string name="choose_dtbo_image">Choose DTBO image</string>
    <string name="choose_save_path">Chose path to save</string>
    <string name="choose_boot_unpack">Choose BOOT image</string>
    <string name="choose_boot_pack">Choose origin BOOT image</string>
    <string name="flash_img">Flash image</string>
    <string name="flash_img_subtext">Choose an image to flash</string>
    <string name="choose_image">Choose image</string>
    <string name="flash_successfully">Flash successfully!</string>
    <string name="flash_failed">Flash failed!</string>
</resources>