<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.dtbo.DTBOFragment">

    <data>

        <variable
            name="viewModel"
            type="com.xayah.imghelper.fragment.dtbo.DTBOViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_dtbo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/dtbo_tips"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:hint="@string/dtbo_textfield_hint"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <Button
                android:id="@+id/textButton_refxresh"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image" />

            <Button
                android:id="@+id/textButton_refresh"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patch_only" />

            <Button
                android:id="@+id/filledButton_backup"
                style="@style/Theme.IMGHelper.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/mtrl_btn_unelevated_state_list_anim"
                android:text="@string/patch_and_flash" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>